--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
     sdk: flutter
   flutter:
     sdk: flutter
-
+  image_picker: ^1.0.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
